syntax = "proto3";

package projection;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

service Projection {
  rpc Project (stream ProjectionRequest) returns (stream ProjectionResponse);
}

message ProjectionRequest {
  string eventType = 1;
  string eventId = 2;
  string stream = 3;
  google.protobuf.Struct eventPayload = 4;
  map<string, string> metadata = 5;
}

message ProjectionResponse {
  string eventId = 1;
  google.protobuf.Any operation = 2;
  map<string, string> metadata = 3;
}

message Ignore {}

message InsertOne {
  google.protobuf.Struct document = 1;
}

message UpdateOne {
  google.protobuf.Struct filter = 1;
  google.protobuf.Struct update = 2;
}

message DeleteOne {
  google.protobuf.Struct filter = 1;
}
